set(VOC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/voc_k20_L4_64.bin)
file(MD5 ${VOC_PATH} VOC_VERSION)
add_definitions(-DVOC_VERSION="${VOC_VERSION}")
if(WIN32)
    add_library(vocabulary SHARED resource.cpp resource.rc resource.h)
    set_source_files_properties(resource.rc PROPERTIES LANGUAGE RC)
    set_source_files_properties(resource.rc OBJECT_DEPENDS ${VOC_PATH})
    enable_language(RC)
else()
    add_library(vocabulary STATIC resource.cpp voc.c)
    set_source_files_properties(voc.c PROPERTIES COMPILE_DEFINITIONS VOC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
    set_source_files_properties(voc.c OBJECT_DEPENDS ${VOC_PATH})
endif()
target_include_directories(vocabulary PUBLIC .)
