if(WIN32)
    add_library(vocabulary SHARED resource.cpp resource.rc resource.h)
    set_source_files_properties(resource.rc PROPERTIES LANGUAGE RC)
    enable_language(RC)
else()
    add_library(vocabulary STATIC resource.cpp voc.c)
    set_source_files_properties(voc.c PROPERTIES COMPILE_DEFINITIONS VOC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/")
endif()
target_include_directories(vocabulary PUBLIC .)
